# aoc_2021

./: .gitignore  Cargo.toml
src/: day1.rs  day10.rs  day11.rs  day13.rs  day15.rs  day18.rs  day2.rs  day21.rs  day5_2020.rs  day6_2020.rs  day8.rs  day9.rs  main.rs  optional_args.rs  vec2d.rs
src/input/: day11_bigger
