[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.51"
# aoc-runner = "0.3.0"
# aoc-runner-derive = "0.3.0"
# derive_more = "0.99.17"
itertools = "0.10.1"
ndarray = "0.15.4"
parse-display = "0.5.3"
priority-queue = "1.2.1"
rayon = "1.5.1"
scan_fmt = "0.2.6"
slab_tree = "0.3.2"
thiserror = "1.0.30"
